--- a/ms-Dropdown-master/examples/index.html
+++ b/ms-Dropdown-master/examples/index.html
@@ -35,7 +35,7 @@
 <script>
 //var tc;
 $(document).ready(function(e) {
-	$("#payments").msDropdown();
+	$(".main-select").msDropdown();
   $("#payments2").msDropdown();
 });
 
